src/objects/MUSW__Master_Inspection_List__c.object
<CustomObject>
    <description>Master control table to determine which Permit, License, etc values will set or create Inspection outcomes via DRE rules. Can be used to allow non-admin users with appropriate permissions to edit their own criteria and outcome values.</description>
    <fields>
        <fullName>Active__c</fullName>
        <formula>IF( AND(Effective_Start_Date__c&lt;TODAY(),
       (OR(ISBLANK(Effective_End_Date__c),
	       Effective_End_Date__c&gt; TODAY())
		) 
		),True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Checklist_Type__c</fullName>
        <label>Checklist Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <label>Credential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Effective_End_Date__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Name__c</fullName>
        <label>Inspection Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type2__c</fullName>
        <label>License Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>License_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Queue_ID__c</fullName>
        <label>Owner Queue ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Queue_User__c</fullName>
        <label>Owner (Queue/User)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Permit_Type__c</fullName>
        <label>Permit Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Permit_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <label>Record Type ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Initial</fullName>
                    <isActive>false</isActive>
                    <label>Initial</label>
                </value>
                <value>
                    <fullName>Routine</fullName>
                    <isActive>false</isActive>
                    <label>Routine</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Routine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Group__c</fullName>
        <label>Use Group</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Use_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <label>Work Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Work_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <externalId>true</externalId>
        <label>external id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Master Inspection List</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Master Inspection List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Inspection Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>